--- a/MainWindow.ui
+++ b/MainWindow.ui
@@ -28,10 +28,34 @@
     <property name="geometry">
      <rect>
       <x>700</x>
-      <y>50</y>
+      <y>210</y>
       <width>561</width>
-      <height>491</height>
+      <height>331</height>
      </rect>
+    </property>
+   </widget>
+   <widget class="QCheckBox" name="showCutted">
+    <property name="geometry">
+     <rect>
+      <x>680</x>
+      <y>40</y>
+      <width>301</width>
+      <height>51</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>20</pointsize>
+     </font>
+    </property>
+    <property name="text">
+     <string>Cut segments</string>
+    </property>
+    <property name="iconSize">
+     <size>
+      <width>32</width>
+      <height>32</height>
+     </size>
     </property>
    </widget>
   </widget>
